--- a/.github/workflows/Build-Padavan-CR660x.yml
+++ b/.github/workflows/Build-Padavan-CR660x.yml
@@ -1,5 +1,5 @@
 #修改TNAME: K2P 中的K2P为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: CR660x
+name: Build-Padavan-CR660x
 
 on: 
   workflow_dispatch:
@@ -31,7 +31,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: K2P
+        TNAME: CR660x
         KERNEL: 3.4
       run: |
         cd /opt/rt-n56u/trunk
