--- a/.github/workflows/Test-CR660x.yml
+++ b/.github/workflows/Test-CR660x.yml
@@ -73,10 +73,10 @@ jobs:
         #以下选项是定义你需要的功能（y=集成,n=忽略），重新写入到.config文件
         ######################################################################
         ##内网穿透
-        #echo "CONFIG_FIRMWARE_INCLUDE_NPC=n" >> .config 
-        echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=n" >> .config #zerotier ~1.3M
-        echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config  #frpc
-        echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=n" >> .config #aliddns
+        #echo "CONFIG_FIRMWARE_INCLUDE_NPC=y" >> .config 
+        echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=y" >> .config #zerotier ~1.3M
+        echo "CONFIG_FIRMWARE_INCLUDE_FRPC=y" >> .config  #frpc
+        echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=y" >> .config #aliddns
         ##科学上网##
         echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n" >> .config
         #echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=n" >> .config
@@ -103,5 +103,5 @@ jobs:
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan-CR660x-3.4.3.9-nano
+        name: Padavan-CR660x-3.4.3.9-zerotier-aliddns
         path: /opt/images
