--- a/.github/workflows/Build-Padavan-K2P-5.0.yml
+++ b/.github/workflows/Build-Padavan-K2P-5.0.yml
@@ -1,5 +1,5 @@
 #修改TNAME: K2P 中的K2P为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: K2P-5.0
+name: Build-Padavan-K2P-5.0
 
 on: 
   workflow_dispatch:
@@ -73,10 +73,10 @@ jobs:
         #以下选项是定义你需要的功能（y=集成,n=忽略），重新写入到.config文件
         ######################################################################
         ##内网穿透
-        #echo "CONFIG_FIRMWARE_INCLUDE_NPC=n" >> .config 
-        echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=n" >> .config #zerotier ~1.3M
-        echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config  #frpc
-        echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=n" >> .config #aliddns
+        #echo "CONFIG_FIRMWARE_INCLUDE_NPC=y" >> .config 
+        echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=y" >> .config #zerotier ~1.3M
+        echo "CONFIG_FIRMWARE_INCLUDE_FRPC=y" >> .config  #frpc
+        echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=y" >> .config #aliddns
         ##科学上网##
         echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=n" >> .config
         #echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=n" >> .config
